--- a/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
@@ -6,6 +6,7 @@
     .nav-item:hover {
         transform: scale(1.05);
     }
+
     h5 {
         color: #ffffff !important;
     }
@@ -26,7 +27,8 @@
                 </ul>
                 <ul class="navbar-nav flex-row align-items-center ms-auto">
                     <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                        <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarDropdown"
+                           role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Ngôn ngữ
                         </a>
@@ -35,41 +37,58 @@
                             <li><a class="dropdown-item" href="javascript:void(0)">Tiếng anh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item" th:if="${session.accountLogged == null}" >
-                        <a class="nav-link" href="/login" >Đăng Nhập</a>
+                    <li class="nav-item navbar-dropdown dropdown-user dropdown" th:if="${session.staff?.username == null}">
+                        <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarLogin"
+                           role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Đăng nhập
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarLogin">
+                            <li><a class="dropdown-item" href="/login/user">Cho Khách Hàng</a></li>
+                            <li><a class="dropdown-item" href="/login/staff">Cho Nhân Viên</a></li>
+                        </ul>
                     </li>
-                    <li  class="nav-item" th:if="${session.accountLogged != null}" >
+                    <li class="nav-item" th:if="${session.staff?.username != null}">
                         <ul class="navbar-nav flex-row align-items-center ms-auto">
-                            <!-- Place this tag where you want the button to render. -->
-                            <!-- User -->
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
+                                   data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img th:src="@{'/image/'+${session.image}}" alt="" class="w-px-5 h-px-5 rounded-circle">
+                                        <img th:src="@{'/image/'+${session.staff?.avatar}}" alt=""
+                                             class="w-px-5 h-px-5 rounded-circle">
+                                    </div>
+                                    <div class="nav-item lh-1 me-3">
+                                        <span>[(${session.staff?.username})]</span>
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu" style="font-size: 15px">
                                     <li>
-                                        <a class="dropdown-item"  th:href="@{/client/profile}">
-                                            <i class="bx bx-power-off me-2"  ></i>
-                                            <span class="align-middle"  >Thông tin tài khoản</span>
+                                        <a class="dropdown-item" th:href="@{/client/profile}">
+                                            <i class='bx bxs-user-circle'></i>
+                                            <span class="align-middle">Thông tin tài khoản</span>
                                         </a>
-                                        <a class="dropdown-item" th:href="@{/order}" >
-                                            <i class="bx bx-power-off me-2" ></i>
-                                            <span class="align-middle"  >Đơn Hàng</span>
+                                        <a class="dropdown-item" th:href="@{/order}">
+                                            <i class='bx bxl-dropbox'></i>
+                                            <span class="align-middle">Đơn Hàng</span>
                                         </a>
-                                        <a class="dropdown-item" th:href="@{/logout}">
-                                            <i class="bx bx-power-off me-2 " ></i>
-                                            <span class="align-middle"   >Đăng Xuất</span>
+                                        <a class="dropdown-item" th:href="@{/login/logout}">
+                                            <i class='bx bx-log-out'></i>
+                                            <span class="align-middle">Đăng Xuất</span>
+                                        </a>
+                                        <a class="dropdown-item" th:href="@{/admin}"
+                                           th:if="${session.staff.role != null}">
+                                            <i class='bx bx-right-arrow-alt'></i>
+                                            <span class="align-middle">Trang quản trị</span>
+                                        </a>
+                                        <a class="dropdown-item" th:href="@{/admin}"
+                                           th:if="${session.staff.role != null}">
+                                            <i class='bx bx-right-arrow-alt'></i>
+                                            <span class="align-middle">Trang bán hàng</span>
                                         </a>
                                     </li>
                                 </ul>
                             </li>
                             <!--/ User -->
-
-                            <li class="nav-item lh-1 me-3">
-                                <span >[(${session.username})]</span>
-                            </li>
                         </ul>
 
                     </li>
@@ -110,7 +129,8 @@
                         <a class="nav-link" href="javascript:void(0)">
                             <span class="position-relative">
                                 <i class='bx bx-cart bx-md'></i>
-                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning " style="font-size: 60%">+9 </span>
+                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning "
+                                      style="font-size: 60%">+9 </span>
                             </span>
                         </a>
                     </li>
