--- a/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
@@ -39,7 +39,8 @@
                             <li><a class="dropdown-item" href="javascript:void(0)">Tiếng anh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item navbar-dropdown dropdown-user dropdown" th:if="${session.staff?.username == null}">
+                    <li class="nav-item navbar-dropdown dropdown-user dropdown"
+                        th:if="${session.staff?.username == null}">
                         <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarLogin"
                            role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
@@ -129,7 +130,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">
+                        <a class="nav-link" th:href="@{/cart}">
                             <span class="position-relative">
                                 <i class='bx bx-cart bx-md'></i>
                                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning "
