--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -102,6 +102,24 @@
                 </li>
             </ul>
         </li>
+        <li th:class="${#strings.contains(session.active,'coupon')?'menu-item active open':'menu-item'}">
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons bx bx-user-circle"></i>
+                <div th:text="#{sidebar.coupon}"></div>
+            </a>
+            <ul class="menu-sub">
+                <li th:class="${#strings.equals(session.active,'/coupon/list')?'menu-item active':'menu-item'}">
+                    <a th:href="@{/admin/coupon/list}" class="menu-link">
+                        <div th:text="#{sidebar.listCoupon}"></div>
+                    </a>
+                </li>
+                <li th:class="${#strings.equals(session.active,'/feature/list')?'menu-item active':'menu-item'}">
+                    <a th:href="@{/admin/feature/list}" class="menu-link">
+                        <div th:text="#{sidebar.listFeature}">List voucher customer</div>
+                    </a>
+                </li>
+            </ul>
+        </li>
         <li th:class="${#strings.equals(session.active,'/blog')?'menu-item active':'menu-item'}">
             <a th:href="@{/admin/blog}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-receipt"></i>
