update lai coupon,feature

--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
@@ -26,7 +26,7 @@
                                     <i class="bx bx-upload d-block d-sm-none"></i>
                                     <input type="file" id="upload" class="account-file-input" hidden=""
                                            accept="image/png, image/jpeg"
-                                           name="image"
+                                           name="avatar"
                                     >
                                 </label>
                             </div>
@@ -165,7 +165,7 @@
                                                         <i class="bx bx-upload d-block d-sm-none"></i>
                                                         <input type="file" th:id="upload2" class="account-file-input" hidden=""
                                                                accept="image/png, image/jpeg"
-                                                               name="image">
+                                                               name="avatar">
                                                     </label>
                                                 </div>
                                                 <div class="row col-lg-8 col-xl-9">
