--- a/webBanTiVi/src/main/resources/templates/admin/page/feature/feature.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/feature/feature.html
@@ -6,7 +6,7 @@
             <i class='tf-icon bx bx-plus-medical'></i> Thêm feature
         </button>
     </div>
-    <form th:action="@{/admin/feature/save}" method="post" th:object="${feature}" enctype="multipart/form-data">
+    <form th:action="@{/admin/feature/save}" method="post" th:object="${feature}">
         <div class="modal fade" th:id="largeModal" tabindex="-1"
              aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
@@ -25,7 +25,7 @@
                                 <div class="col-sm-4">
                                     <label class="form-label">Name:</label>
                                     <textarea style="height: 12px" type="text" class="form-control"
-                                              th:name="name_feature"></textarea>
+                                              th:name="namefeature"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                 <tr th:each="feature : ${listFea}">
                     <!--                    <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>1</strong></td>-->
                     <td th:text="${feature.code}"></td>
-                    <td th:text="${feature.name_feature}"></td>
+                    <td th:text="${feature.namefeature}"></td>
                     <td>
                         <button type="button" class="btn btn-icon btn-primary" data-bs-toggle="modal"
                                 th:data-bs-target="|#modal${feature.id}|">
@@ -111,7 +111,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <form th:action="@{/admin/feature/update/{id}(id=${feature.id})}"
-                                              method="post" th:object="${feature}" enctype="multipart/form-data">
+                                              method="post" th:object="${feature}">
                                             <div class="row">
                                                 <div class="row col-lg-8 col-xl-9">
 
@@ -123,7 +123,7 @@
                                                     <div class="col-sm-4">
                                                         <label class="form-label">Name:</label>
                                                         <textarea style="height: 12px" type="text" class="form-control"
-                                                                  th:name="name_feature" th:text="${feature.name_feature}"
+                                                                  th:name="namefeature" th:text="${feature.namefeature}"
 
                                                         ></textarea>
                                                     </div>
