manh up code security

--- a/webBanTiVi/src/main/resources/templates/admin/layout.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html class="light-style layout-menu-fixed" xmlns:th="http://www.thymeleaf.org">
+<html class="light-style layout-menu-fixed" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -31,7 +32,7 @@
     <div class="layout-container">
         <aside th:replace="~{/admin/layout/_sidebar.html}">
         </aside>
-        <div class="layout-page">
+        <div class="layout-page" >
             <div th:replace="~{/admin/layout/_navbar.html}">
             </div>
             <div class="content-wrapper">
@@ -60,6 +61,7 @@
 
 <!--date range picker-->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 <!--end date range picker-->
 <!-- Page JS -->
