--- a/webBanTiVi/src/main/resources/templates/user1/index.html
+++ b/webBanTiVi/src/main/resources/templates/user1/index.html
@@ -50,7 +50,8 @@
             </div>
             <div class="content-wrapper">
                 <div class="container-xxl flex-grow-1 container-p-y ">
-                    <div th:replace="~{${session.pageView}}"></div>
+                    <div  th:replace="~{${session.pageView}}"></div>
+<!--                  <input id="staffIndex" th:value="${jwt}" hidden="" >-->
                 </div>
                 <div th:replace="~{/user1/layout/_footer.html}"></div>
                 <div class="content-backdrop fade"></div>
@@ -85,5 +86,16 @@
 
 <script th:src="@{/admin/plugin/js/date_picker_order.js}"></script>
 <script th:src="@{/admin/plugin/js/select2-plugin.js}"></script>
+<!--<script>-->
+<!--        if( document.getElementById("staffIndex").value !="") {-->
+<!--        $(document).ready(function () {-->
+<!--            const jwt=document.getElementById("staffIndex").value;-->
+<!--            localStorage.setItem("jwt", jwt);-->
+<!--            alert("Đăng nhập thành công!")-->
+<!--        })-->
+<!--    }-->
+<!--</script>-->
+
+
 </body>
 </html>
