--- a/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
@@ -1,4 +1,4 @@
-<style>
+<style xmlns:divth="http://www.w3.org/1999/html">
     .nav-link.page:hover {
         border-bottom: 2px solid #b1154a;
     }
@@ -37,7 +37,7 @@
                             <li><a class="dropdown-item" href="javascript:void(0)">Tiếng anh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item navbar-dropdown dropdown-user dropdown" th:if="${session.staff?.username == null}">
+                    <li class="nav-item navbar-dropdown dropdown-user dropdown" sec:authorize="!isAuthenticated()">
                         <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarLogin"
                            role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
@@ -48,17 +48,17 @@
                             <li><a class="dropdown-item" href="/login/staff">Cho Nhân Viên</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item" th:if="${session.staff?.username != null}">
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
                         <ul class="navbar-nav flex-row align-items-center ms-auto">
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
                                    data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img th:src="@{'/image/'+${session.staff?.avatar}}" alt=""
+                                        <img th:src="@{'/image/'+${#authentication.principal.avatar}}" alt=""
                                              class="w-px-5 h-px-5 rounded-circle">
                                     </div>
                                     <div class="nav-item lh-1 me-3">
-                                        <span>[(${session.staff?.username})]</span>
+                                        <span  th:text="${#authentication.principal.name}"></span>
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu" style="font-size: 15px">
@@ -75,16 +75,17 @@
                                             <i class='bx bx-log-out'></i>
                                             <span class="align-middle">Đăng Xuất</span>
                                         </a>
-                                        <a class="dropdown-item" th:href="@{/admin}"
-                                           th:if="${session.staff.role != null}">
-                                            <i class='bx bx-right-arrow-alt'></i>
-                                            <span class="align-middle">Trang quản trị</span>
-                                        </a>
-                                        <a class="dropdown-item" th:href="@{/admin}"
-                                           th:if="${session.staff.role != null}">
-                                            <i class='bx bx-right-arrow-alt'></i>
-                                            <span class="align-middle">Trang bán hàng</span>
-                                        </a>
+
+                                        <div th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
+                                            <a class="dropdown-item" th:href="@{/admin}">
+                                                <i class='bx bx-right-arrow-alt'></i>
+                                                <span class="align-middle"  >Trang quản trị</span>
+                                            </a>
+                                            <a class="dropdown-item" th:href="@{/client}">
+                                                <i class='bx bx-right-arrow-alt'></i>
+                                                <span class="align-middle">Trang bán hàng</span>
+                                            </a>
+                                        </div>
                                     </li>
                                 </ul>
                             </li>
@@ -139,3 +140,4 @@
         </div>
     </div>
 </nav>
+
