--- a/webBanTiVi/src/main/resources/templates/user/layout/_footer.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_footer.html
@@ -1,64 +1,77 @@
-<footer class="footer">
-    <div class="container">
+<style>.footer-link {
+    color: #ffffff !important;
+}
+
+.bg-black {
+    background-color: black !important;
+}
+</style>
+<footer class="content-footer footer bg-footer-theme bg-black text-white">
+    <div class="container-fluid pt-5 pb-4">
         <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="footer__about">
-                    <div class="footer__logo">
-                        <a href="#"><img th:src="@{/image/logochuan-05.png}" alt=""></a>
-                    </div>
-                    <p>The customer is at the heart of our unique business model, which includes design.</p>
-                    <a href="#"><img src="img/payment.png" alt=""></a>
+            <div class="col-12 col-sm-6 col-md-3 mb-4 mb-sm-0">
+                <h4 class="fw-bold mb-3">
+                    <a href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/html/vertical-menu-template"
+                       target="_blank" class="footer-text"><img src="/image/logochuan-05.png" class="w-px-200"> </a>
+                </h4>        <span>Get ready for better world</span>
+                <div class="social-icon my-3">
+                    <a href="javascript:void(0)" class="btn btn-icon btn-sm btn-facebook"><i
+                            class='bx bxl-facebook'></i></a>
+                    <a href="javascript:void(0)" class="ms-2 btn btn-icon btn-sm btn-twitter"><i
+                            class='bx bxl-twitter'></i></a>
+                    <a href="javascript:void(0)" class="ms-2 btn btn-icon btn-sm btn-linkedin"><i
+                            class='bx bxl-linkedin'></i></a>
+                    <a href="javascript:void(0)" class="ms-2 btn btn-icon btn-sm btn-github"><i
+                            class='bx bxl-github'></i></a>
                 </div>
+                <p class="pt-4">
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>
+                    © ThemeSelection
+                </p>
             </div>
-            <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
-                <div class="footer__widget">
-                    <h6>SẢN PHẨM</h6>
-                    <ul>
-                        <li><a href="/products">Trang sản phẩm</a></li>
-                        <li><a href="/shopping-cart">Giỏ hàng</a></li>
-                        <li><a href="/lookuporder">Tra cứu hóa đơn</a></li>
-                        <li><a href="/promotions">Chương trình khuyến mại</a></li>
-                    </ul>
-                </div>
+            <div class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0">
+                <h5>Company</h5>
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">About</a></li>
+                    <li>
+                        <a href="javascript:void(0)" class="footer-link d-block pb-2">Career <span
+                                class="badge bg-label-primary text-capitalize">We're hiring</span></a>
+                    </li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Blog</a></li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Customers</a></li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Hire us</a></li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">FAQs</a></li>
+                </ul>
             </div>
-            <div class="col-lg-2 col-md-3 col-sm-6">
-                <div class="footer__widget">
-                    <h6>THÔNG TIN</h6>
-                    <ul>
-                        <li><a href="#">Giới thiệu</a></li>
-                        <li><a href="/registercard">Thẻ thành viên</a></li>
-                        <li><a href="#">Chính sách đổi trả</a></li>
-                        <li><a href="#">Tuyển dụng</a></li>
-                    </ul>
-                </div>
+            <div class="col-12 col-sm-6 col-md-3 mb-4 mb-sm-0">
+                <h5>Products</h5>
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Admin Template</a></li>
+                    <li>
+                        <a href="javascript:void(0)" class="footer-link d-block pb-2">UI Kit</a>
+                    </li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Styleguide</a></li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">API</a></li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Documentation</a></li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Changelog</a></li>
+                </ul>
             </div>
-            <div class="col-lg-3 offset-lg-1 col-md-6 col-sm-6">
-                <div class="footer__widget">
-                    <h6>PHẢN HỒI</h6>
-                    <div class="footer__newslatter">
-                        <p>Be the first to know about new arrivals, look books, sales & promos!</p>
-                        <form action="#">
-                            <input type="text" placeholder="Your email">
-                            <button type="submit"><span class="icon_mail_alt"></span></button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <div class="footer__copyright__text">
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <p>Copyright ©
-                        <script>
-                            document.write(new Date().getFullYear());
-                        </script>2020
-                        All rights reserved | This template is made with <i class="fa fa-heart-o"
-                                                                            aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                    </p>
-                </div>
+            <div class="col-12 col-sm-6 col-md-3">
+                <h5>Features</h5>
+                <ul class="list-unstyled">
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Affiliate Program</a></li>
+                    <li>
+                        <a href="javascript:void(0)" class="footer-link d-block pb-2">Integration</a>
+                    </li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Support</a></li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Special Offers</a></li>
+                    <li><a href="javascript:void(0)" class="footer-link d-block pb-2">Page Builder</a></li>
+                    <li><a href="https://themeselection.com/license/" class="footer-link me-4"
+                           target="_blank">License</a></li>
+                </ul>
             </div>
         </div>
     </div>
 </footer>
-<!-- Footer Section End -->
