--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -1,84 +1,143 @@
+<style xmlns:divth="http://www.w3.org/1999/html">
+    .nav-link.page:hover {
+        border-bottom: 2px solid #b1154a;
+    }
 
-<header class="header">
-    <div class="header__top">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-7">
-                    <div class="header__top__left">
-                        <p>Hệ thống cửa hàng điện tử...</p>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-5">
-                    <div class="header__top__right">
-                        <ul th:if="${session.accountLogged != null}">
-                        <li class="header__top__links" >
-                            <a style="color: #fff" href="/" th:value="session.username">[(${session.username})]</a></li>
-                            <li class="header__top__links">
-                                <a style="color: #fff"x` 	th:href="@{/logout}">Đăng xuất</a></li>
-                        </li>
+    .nav-item:hover {
+        transform: scale(1.05);
+    }
+
+    h5 {
+        color: #ffffff !important;
+    }
+</style>
+<nav>
+    <div class="navbar navbar-expand-lg navbar-light bg-navbar-theme bg-secondary"
+         style="background-color: black!important;">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav1"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse fs-6" id="nav1">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <span class="navbar-text">
+             Hệ thống cửa hàng điện tử Big6store
+                </span>
+                </ul>
+                <ul class="navbar-nav flex-row align-items-center ms-auto">
+                    <li class="nav-item navbar-dropdown dropdown-user dropdown">
+                        <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarDropdown"
+                           role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Ngôn ngữ
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="javascript:void(0)">Tiếng việt</a></li>
+                            <li><a class="dropdown-item" href="javascript:void(0)">Tiếng anh</a></li>
                         </ul>
-                        <div  class="header__top__links" th:if="${session.accountLogged == null}">
-                            <a style="color: #fff" href="/login">Đăng nhập</a>
-                            <a style="color: #fff"x` href="/register">Đăng ký</a>
-                        </div>
-<!--                        <div class="header__top__hover">-->
-<!--                            <span>Ngôn Ngữ</span>-->
-<!--                            <ul>-->
-<!--                                <li>Tiếng Việt</li>-->
-<!--                                <li>Tiếng Anh</li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-3">
-                <div class="header__logo">
-                    <a href="/"><img th:src="@{/image/logochuan-04.png}" alt="" style="width: 250px"></a>
-                </div>
-            </div>
-            <div class="col-lg-7 col-md-7">
-                <nav class="header__menu mobile-menu">
-                    <ul>
-                        <li class="active"><a href="/">Trang chủ</a></li>
-                        <li><a href="/shop">Trang sản phẩm</a></li>
-                        <li><a href="/promotion">CTKM</a></li>
-                        <li><a href="#">Thông tin</a>
-                            <ul class="dropdown">
-                                <li><a href="/about">Trang giới thiệu</a></li>
-                                <li><a href="/registercard">Thẻ thành viên</a></li>
-                                <li><a href="#">Các chính sách</a></li>
-                                <li><a href="#">Tuyển dụng</a></li>
-                                <li><a href="#">Tin tức</a></li>
-                                <li><a href="#">Liên hệ</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Thao tác</a>
-                            <ul class="dropdown">
+                    </li>
+                    <li class="nav-item navbar-dropdown dropdown-user dropdown" sec:authorize="!isAuthenticated()">
+                        <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarLogin"
+                           role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Đăng nhập
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarLogin">
+                            <li><a class="dropdown-item" href="/login/user">Cho Khách Hàng</a></li>
+                            <li><a class="dropdown-item" href="/login/staff">Cho Nhân Viên</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <ul class="navbar-nav flex-row align-items-center ms-auto">
+                            <li class="nav-item navbar-dropdown dropdown-user dropdown">
+                                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
+                                   data-bs-toggle="dropdown">
+                                    <div class="avatar avatar-online">
+                                        <img th:src="@{'/image/'+${#authentication.principal.avatar}}" alt=""
+                                             class="w-px-5 h-px-5 rounded-circle">
+                                    </div>
+                                    <div class="nav-item lh-1 me-3">
+                                        <span  th:text="${#authentication.principal.name}"></span>
+                                    </div>
+                                </a>
+                                <ul class="dropdown-menu" style="font-size: 15px">
+                                    <li>
+                                        <a class="dropdown-item" th:href="@{/client/profile}">
+                                            <i class='bx bxs-user-circle'></i>
+                                            <span class="align-middle">Thông tin tài khoản</span>
+                                        </a>
+                                        <a class="dropdown-item" th:href="@{/order}">
+                                            <i class='bx bxl-dropbox'></i>
+                                            <span class="align-middle">Đơn Hàng</span>
+                                        </a>
+                                        <a class="dropdown-item" th:href="@{/login/logout}">
+                                            <i class='bx bx-log-out'></i>
+                                            <span class="align-middle">Đăng Xuất</span>
+                                        </a>
 
-                                <li><a href="/lookuporder">Tra cứu hóa đơn</a></li>
-                                <li><a href="/completed">Hoàn thành</a></li>
-                                <li><a href="/processing">Chờ thanh toán</a></li>
-                                <li><a href="/return">Trả hàng</a></li>
-                                <li><a href="/shopping-detail">Chi tiết sản phẩm</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="col-lg-2 col-md-2">
-                <div class="header__nav__option">
-                    <a href="#" class="search-switch"><img src="/user/img/icon/search.png" alt=""></a>
-                    <a href="#"><img src="/user/img/icon/heart.png" alt=""></a>
-                    <a href="/shoppingcart"><img src="/user/img/icon/cart.png" alt=""> <span>0</span></a>
-                    <div class="price">0</div>
-                </div>
+                                        <div th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
+                                            <a class="dropdown-item" th:href="@{/admin}">
+                                                <i class='bx bx-right-arrow-alt'></i>
+                                                <span class="align-middle"  >Trang quản trị</span>
+                                            </a>
+                                            <a class="dropdown-item" th:href="@{/client}">
+                                                <i class='bx bx-right-arrow-alt'></i>
+                                                <span class="align-middle">Trang bán hàng</span>
+                                            </a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </li>
+                            <!--/ User -->
+                        </ul>
+
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="canvas__open"><i class="fa fa-bars"></i></div>
     </div>
-</header>
+    <div class="navbar navbar-expand-lg navbar-light bg-navbar-theme" style="z-index: auto!important;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/"><img src="/image/logochuan-04.png" class="w-px-250"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav2"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse fs-5" id="nav2">
+                <ul class="navbar-nav me-lg-auto mb-2 mb-lg-0">
+                    <li class="nav-item mx-3">
+                        <a class="nav-link active page" aria-current="page" href="/">Trang chủ</a>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <a class="nav-link page" href="/tivi">Tivi</a>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <a class="nav-link page" href="/accessory">Phụ kiện</a>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <a class="nav-link page" href="/invoice">Đơn hàng</a>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <a class="nav-link page" href="javascript:void(0)">Khuyến mãi</a>
+                    </li>
+                    <li class="nav-item mx-3">
+                        <a class="nav-link page" href="javascript:void(0)">Liên hệ</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:void(0)">
+                            <span class="position-relative">
+                                <i class='bx bx-cart bx-md'></i>
+                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning "
+                                      style="font-size: 60%">+9 </span>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
 
