--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -25,11 +25,9 @@
                 <div>Statistic</div>
             </a>
         </li>
-
         <li class="menu-header small text-uppercase">
             <span th:text="#{sidebar.management}"></span>
         </li>
-
         <li th:class="${#strings.equals(session.active,'/product')?'menu-item active':'menu-item'}">
             <a th:href="@{/admin/product}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-tv"></i>
@@ -67,7 +65,6 @@
             </a>
             <ul class="menu-sub">
                 <li th:class="${#strings.equals(session.active,'/customer/list')?'menu-item active':'menu-item'}">
-                <li>
                     <a th:href="@{/admin/customer/list}" class="menu-link">
                         <div th:text="#{sidebar.listCustomer}"></div>
                     </a>
@@ -98,13 +95,36 @@
                         <div th:text="#{sidebar.listVoucher}"></div>
                     </a>
                 </li>
-                <li>
                 <li th:class="${#strings.equals(session.active,'/voucherCustomer')?'menu-item active':'menu-item'}">
                     <a th:href="@{/admin/voucherCustomer}" class="menu-link">
                         <div th:text="#{sidebar.listVoucherCustomer}">List voucher customer</div>
                     </a>
                 </li>
             </ul>
+        </li>
+        <li th:class="${#strings.contains(session.active,'coupon')?'menu-item active open':'menu-item'}">
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons bx bx-user-circle"></i>
+                <div th:text="#{sidebar.coupon}"></div>
+            </a>
+            <ul class="menu-sub">
+                <li th:class="${#strings.equals(session.active,'/coupon/list')?'menu-item active':'menu-item'}">
+                    <a th:href="@{/admin/coupon/list}" class="menu-link">
+                        <div th:text="#{sidebar.listCoupon}"></div>
+                    </a>
+                </li>
+                <li th:class="${#strings.equals(session.active,'/feature/list')?'menu-item active':'menu-item'}">
+                    <a th:href="@{/admin/feature/list}" class="menu-link">
+                        <div th:text="#{sidebar.listFeature}">List voucher customer</div>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li th:class="${#strings.equals(session.active,'/blog')?'menu-item active':'menu-item'}">
+            <a th:href="@{/admin/blog}" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-receipt"></i>
+                <div data-i18n="Blog">Blog</div>
+            </a>
         </li>
         <li class="menu-header small text-uppercase">
             <span>Other</span>
