--- a/webBanTiVi/src/main/resources/templates/admin/page/technical/resolution.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/technical/resolution.html
@@ -100,23 +100,23 @@
                                                 <div class="col-sm-4">
                                                     <label class="form-label">Mã MS:</label>
                                                     <input type="text" class="form-control" th:name="code"
-                                                           th:value="${size.code}">
+                                                           th:value="${resolution.code}">
                                                 </div>
 
                                                 <div class="col-sm-4">
                                                     <label class="form-label">ten kc:</label>
                                                     <input type="text" class="form-control" th:name="nameResolution"
-                                                           th:value="${size.nameResolution}">
+                                                           th:value="${resolution.nameResolution}">
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <label class="form-label">dai:</label>
                                                     <input type="text" class="form-control" th:name="screenLength"
-                                                           th:value="${size.screenLength}">
+                                                           th:value="${resolution.screenLength}">
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <label class="form-label">rong:</label>
                                                     <input type="text" class="form-control" th:name="screenWidth"
-                                                           th:value="${size.screenWidth}">
+                                                           th:value="${resolution.screenWidth}">
                                                 </div>
 
 
